--- a/style.css
+++ b/style.css
@@ -150,6 +150,7 @@ margin-top:5px;}
   text-transform: uppercase;
   margin: 20px 0;
   box-shadow: 10px 10px 15px black;
+  color:white;
 
 }
 .skill-bar{
@@ -300,7 +301,6 @@ box-shadow: 10px 10px 15px black;
   display:inline-block;
   background:black; 
   margin-top:100px;
-  margin-bottom:200px;
   animation-name: ex3;
   animation-duration: 2s;
   animation-iteration-count: infinite;
@@ -362,4 +362,38 @@ box-shadow: 10px 10px 15px black;
   .project3:hover{
     height:480px;
   }
+}
+
+.tool1{
+  position:relative;
+  margin-top:50px;
+  width:250px;
+  height:314px;
+  background-color:black;
+  margin-left:5%;
+  border-radius:20px;
+  display:inline-block;
+  border:2px solid crimson;
+  margin-bottom:50px;
+  transition:.5s;
+}
+.tool1 img{
+  position:relative;
+  width:90%;
+  
+}
+.tool1 h3{
+  color:white;
+  text-align:center;
+  font-size: 20px;
+}
+.tool1 a{
+  color:white;
+  font-size:17px;
+  text-align:center;
+}
+.tool1 i{
+  color:White;
+  font-size:14px;
+  text-align:center;
 }
