--- a/style.css
+++ b/style.css
@@ -217,6 +217,9 @@ box-shadow: 10px 10px 15px black;
   transition:.5s;
   height:300px;
 }
+.project1 a{
+  color:greenyellow;
+}
 .project1 h3{
   color:white;
   text-align:center;
@@ -259,6 +262,10 @@ box-shadow: 10px 10px 15px black;
 }
 @keyframes ex2 {
   100% {  box-shadow:0px 0px 53px crimson;    }
+}
+
+.project2 a{
+  color:crimson;
 }
 .project2 img{
   width:330px;
@@ -314,6 +321,10 @@ box-shadow: 10px 10px 15px black;
   transition:.5s;
   height:300px;
 }
+
+.project3 a{
+  color:crimson;
+}
 .project3 h3{
   color:white;
   text-align:center;
@@ -360,7 +371,7 @@ box-shadow: 10px 10px 15px black;
     height:385px;
   }
   .project3:hover{
-    height:480px;
+    height:485px;
   }
 }
 
