--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body{
     background-size:auto;
     width:90%;
     scroll-behavior: smooth;
+    
 }
  
 .topnav {
@@ -63,7 +64,7 @@ body{
   }
 }
 
-/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links verti  ly instead of horizontally) */
 @media screen and (max-width: 600px) {
   .topnav.responsive {position: fixed;}
   .topnav.responsive a.icon {
@@ -83,7 +84,8 @@ body{
     margin-top:100px;
     text-align:center;
     text-shadow:4px 4px black ;
-    position:relative;
+    
+  margin:auto; 
 }
 .container2{
     width:90%;
@@ -95,6 +97,8 @@ body{
     margin-top:30px;
     align-content: center;
     align-items: center;
+    margin-left:5%;
+    margin-right:5%;
 }
 .container2 img{
     width:120px;
@@ -116,8 +120,10 @@ body{
 }
 .code{
     text-align: center;
+    margin:auto;
 margin-top:5px;}
 .code i{
+  margin:auto;
     font-size:50px;
     color:white;
     text-shadow:10px 10px black;
@@ -204,7 +210,7 @@ box-shadow: 10px 10px 15px black;
   transition:.5s;
   display:inline-block;
   background:black;
-  margin-left:0;
+  margin:auto;
   animation-name: ex1;
   animation-duration: 2s;
   animation-iteration-count: infinite;
@@ -254,8 +260,7 @@ box-shadow: 10px 10px 15px black;
   transition:.5s;
   display:inline-block;
   background:black;
-  margin-left:0;  
-  margin-top:100px;
+  margin:auto;
   animation-name: ex2;
   animation-duration: 2s;
   animation-iteration-count: infinite;
@@ -307,7 +312,7 @@ box-shadow: 10px 10px 15px black;
   transition:.5s;
   display:inline-block;
   background:black; 
-  margin-top:100px;
+  margin:auto;
   animation-name: ex3;
   animation-duration: 2s;
   animation-iteration-count: infinite;
@@ -407,4 +412,52 @@ box-shadow: 10px 10px 15px black;
   color:White;
   font-size:14px;
   text-align:center;
+}
+
+.email{
+  text-align:center;
+  margin-top:30px;
+  margin-bottom: 100px;
+}
+.email label{
+  text-align:center;
+  color:white;
+  font-size:17px;
+}
+.email input{
+  
+  box-shadow:5px 5px 10px crimson;
+}
+.email input[type="submit"]{
+  width:70px;
+  border-radius:10px;
+  cursor:pointer;
+}
+.email input[type="reset"]{
+  width:70px;
+  border-radius:10px;
+  cursor:pointer;
+}
+.footer{
+  width:100%;
+  position: absolute  ;
+  margin-left:-10px;  
+  height:120px;
+  color:white;
+  align-content: center;
+  background-color:#333;
+}
+.footer img{
+width:70px;
+height:70px;
+text-align: center;
+align-self: center;
+align-content: center;
+}
+.footer p{
+  font-size:17px;
+  padding:0;
+  margin:auto;
+  font-family:sans-serif;
+
 }
