--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
     height:100%;
     background: linear-gradient(to bottom right, white , black 70%);
     background-size:auto;
-    width:90%;
+    width:auto;
     scroll-behavior: smooth;
     
 }
@@ -13,15 +13,19 @@ body{
   overflow: hidden;
   position: fixed;
   top: 0;
-  width: 100%;
+  width: auto;
   text-align: center;
   z-index:300;
+  left:25%;
+  right:25%;
+  border:3px solid white;
 }
 .topnav {
   background-color: #333;
   overflow: hidden;
   border-radius:10px;
   float:left;
+  width:auto
 }
 .topnav img{
   width:auto;
@@ -29,6 +33,8 @@ body{
   max-width: 50px;
   max-height: 50px;
   float:left;
+  
+  text-align:center;
 }
 /* Style the links inside the navigation bar */
 .topnav a {
@@ -61,6 +67,7 @@ body{
   .topnav a.icon {
     float: right;
     display: block;
+    
   }
 }
 
@@ -72,6 +79,7 @@ body{
     right: 0;
     top: 0;
   }
+  
   .topnav.responsive a {
     float: none;
     display: block;
@@ -126,19 +134,20 @@ margin-top:5px;}
   margin:auto;
     font-size:50px;
     color:white;
-    text-shadow:10px 10px black;
+
     animation-name: example;
     animation-duration: 1s;
     animation-iteration-count: infinite;
 }
 @keyframes example {
 
-  100% {    color:crimson}
+  100% {    color:crimson    ;text-shadow:10px 10px black;
+  }
 }
 
 .skills{
   width:100%;
-  max-width:600px;
+  max-width:300px;
   padding:0 20px;
   align-self: center;
   align-content: center;
@@ -148,6 +157,7 @@ margin-top:5px;}
 @media only screen and (max-width: 550px) {
   .skills {
     margin-left:0;
+    width:auto;
   }
 }
 .skill-name{
