--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html{
+  
+  scroll-behavior: smooth;
+}
 body{
     font-family: monospace;
     align-self: center;
@@ -116,7 +120,7 @@ body{
     text-align: center;
     margin-bottom:10px;
     clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
-    box-shadow:7px 7px 10px black;
+
 }
 .container3{
     text-align: center;
@@ -133,7 +137,6 @@ margin-top:5px;}
 .code i{
   margin:auto;
     font-size:50px;
-    color:white;
 
     animation-name: example;
     animation-duration: 1s;
@@ -167,13 +170,12 @@ margin-top:5px;}
   margin: 20px 0;
   box-shadow: 10px 10px 15px black;
   color:white;
-
+  background:auto;
 }
 .skill-bar{
 height:20px;
 background:#cacaca;
 border-radius:8px;
-
 box-shadow: 10px 10px 15px black;
 }
 .skill-per{
@@ -182,7 +184,7 @@ box-shadow: 10px 10px 15px black;
   border-radius:8px;
   width:0;
   position:relative;
-  transition: 2s linear;
+  transition: 5s linear;
 }
 .skill-per::before{
   content: attr(per);
@@ -404,7 +406,7 @@ box-shadow: 10px 10px 15px black;
 }
 .tool1 img{
   position:relative;
-  width:90%;
+  width:70%;
   
 }
 .tool1 h3{
@@ -469,4 +471,70 @@ align-content: center;
   margin:auto;
   font-family:sans-serif;
 
+}
+
+
+/*Loader*/
+
+.loader_bg{
+  position:fixed;
+  display:relative;
+  z-index:9999999;
+  background: rgb(30, 30, 30);
+  width:100%;
+  height:100%;
+  top:0;
+  left:0;
+  overflow: hidden;
+  }
+
+
+  .loader{
+    display:flex;
+    flex-direction: column;
+  z-index:9999999;
+  position:absolute;
+  top:50%;
+  left:50%;
+  font-size:20px;
+  transform:translate(-50%,-50%);
+  font-family: monospace;
+  color:white;
+  text-align:center;
+  overflow: hidden;
+}
+.loader img{
+  height:100px;
+}
+.line{
+  position:relative;
+  top:50%;
+  width:24em;
+  margin:0 auto;
+  border-right: 2px solid white;
+  font-size:100%;
+  text-align:center;
+  white-space:nowrap;
+  overflow:hidden;
+  transform:translateY(-50%);
+}
+.anim-typewritter{
+  animation: typewritter 2s steps(40)  1 normal both,
+  blinkTextCursor 500ms steps(40) infinite normal;
+}
+@keyframes typewritter{
+from{
+  width:0;
+}
+to{
+  width:18em;
+}
+}
+@keyframes blinkTextCursor{
+  from{
+    border-right-color:transparent;
+  }
+  top{    
+    border-right-color:white;
+  }
 }
