--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html{
-  
+  box-sizing: border-box;
   scroll-behavior: smooth;
 }
 body{
@@ -443,6 +443,7 @@ box-shadow: 10px 10px 15px black;
 .email input{
   background:transparent;
   border:0;
+  width:200px;
   border-radius:20px;
   text-align: center;
   color:rgb(112, 106, 106);
@@ -498,23 +499,7 @@ align-content: center;
   }
 
 
-  .loader{
-    display:flex;
-    flex-direction: column;
-  z-index:9999999;
-  position:absolute;
-  top:50%;
-  left:50%;
-  font-size:20px;
-  transform:translate(-50%,-50%);
-  font-family: monospace;
-  color:white;
-  text-align:center;
-  overflow: hidden;
-}
-.loader img{
-  height:100px;
-}
+
 .line{
   position:relative;
   top:50%;
@@ -547,4 +532,103 @@ to{
   top{    
     border-right-color:white;
   }
+}
+
+
+#logo{
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%);
+}
+
+
+#logo path:nth-child(2){
+/*letter L */
+stroke-dasharray: 198px;
+stroke-dashoffset: 198px;
+animation: line-anim 1s ease forwards 0s;
+}
+
+#logo path:nth-child(3){
+/*letter e */
+stroke-dasharray: 410px;
+stroke-dashoffset: 410px;
+animation: line-anim 1s ease forwards 1s;
+}
+
+#logo path:nth-child(4){
+/*letter o */
+stroke-dasharray: 289px;
+stroke-dashoffset: 289px;
+animation: line-anim 2s ease forwards 0.9s;
+}
+
+#logo path:nth-child(5){
+/*letter x */
+position:absolute;
+stroke-dasharray: 320px;
+stroke-dashoffset: 320px;
+animation: line-anim 2s ease forwards 0.9s;
+}
+
+#logo path:nth-child(6){
+/*letter R */
+stroke-dasharray: 940px;
+stroke-dashoffset: 940px;
+animation: line-anim 2s ease forwards 1.2s;
+}
+
+#logo path:nth-child(7){  
+/*letter a */
+stroke-dasharray: 320px;
+stroke-dashoffset: 320px;
+animation: line-anim 2s ease forwards 1.5s;
+}
+
+#logo path:nth-child(8){
+/*letter m */
+stroke-dasharray: 470px;
+stroke-dashoffset: 470px;
+animation: line-anim 2s ease forwards 1.8s;
+}
+
+#logo path:nth-child(9){
+/*letter a */
+stroke-dasharray: 2350px;
+stroke-dashoffset: 2350px;
+animation: line-anim 2s ease forwards 2.1s;
+}
+
+#logo path:nth-child(10){
+/*letter d */
+stroke-dasharray: 320px;
+stroke-dashoffset: 320px;
+animation: line-anim 2s ease forwards 2.4s;
+}  
+
+#logo path:nth-child(11){
+/*letter a */
+stroke-dasharray: 320px;
+stroke-dashoffset: 320px;
+animation: line-anim 2s ease forwards 2.7s;
+}
+
+#logo path:nth-child(12){
+/*letter n */
+stroke-dasharray: 320px;
+stroke-dashoffset: 320px;
+animation: line-anim 2s ease forwards 3.0s;
+}
+#logo path:nth-child(13){
+/*letter i */
+stroke-dasharray: 320px;
+stroke-dashoffset: 320px;
+animation: line-anim 2s ease forwards 3.3s;
+}
+
+@keyframes line-anim{
+to{
+stroke-dashoffset: 0;
+}
 }
