--- a/style.css
+++ b/style.css
@@ -1,12 +1,18 @@
+*{
+  
+  scroll-behavior: smooth;
+}
 html{
   box-sizing: border-box;
+  padding:0;
+  margin:0;
   scroll-behavior: smooth;
 }
 body{
     font-family: monospace;
     align-self: center;
     height:100%;
-    background: linear-gradient(to bottom right, white , black 70%);
+    background-color:  #333;
     background-size:auto;
     width:auto;
     scroll-behavior: smooth;
@@ -22,7 +28,7 @@ body{
   z-index:300;
   left:25%;
   right:25%;
-  border:3px solid white;
+  border:3px solid skyblue;
   margin-top:10px;
 }
 .topnav {
@@ -51,6 +57,7 @@ body{
   text-decoration: none;
   font-size: 17px;
   border-radius:10px;
+  
 }
 
 /* Change the color of links on hover */
@@ -87,7 +94,8 @@ body{
   .topnav.responsive a {
     float: none;
     display: block;
-    text-align: left;
+    text-align: center;
+    
   }
 }
 .aboutme h3{
@@ -95,7 +103,7 @@ body{
     color:white;
     margin-top:100px;
     text-align:center;
-    text-shadow:4px 4px black ;
+    text-shadow:2px 2px skyblue ;
     
   margin:auto; 
 }
@@ -103,14 +111,16 @@ body{
     width:90%;
     justify-content: center;
     background:transparent;
-    box-shadow:15px 15px 10px black;
     height:auto;
     padding:15px;
-    margin-top:30px;
+    margin-top:50px;
     align-content: center;
     align-items: center;
     margin-left:5%;
     margin-right:5%;
+    transition:.5s;
+    box-shadow:0px 0px 10px skyblue;
+    border-radius:20px;
 }
 .container2 img{
     width:120px;
@@ -120,8 +130,8 @@ body{
     text-align: center;
     margin-bottom:10px;
     clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
-
 }
+
 .container3{
     text-align: center;
     color:white;
@@ -139,12 +149,12 @@ margin-top:5px;}
     font-size:50px;
 
     animation-name: example;
-    animation-duration: 1s;
+    animation-duration: 1.5s;
     animation-iteration-count: infinite;
 }
 @keyframes example {
 
-  100% {    color:crimson    ;text-shadow:10px 10px black;
+  100% {    color:skyblue    ;text-shadow:10px 10px black;
   }
 }
 
@@ -233,7 +243,9 @@ box-shadow: 10px 10px 15px black;
   animation-iteration-count: infinite;
 }
 @keyframes ex1 {
-  100% {  box-shadow:0px 0px 53px greenyellow;    }
+  0% {  box-shadow:0px 0px 30px greenyellow;}
+  50% {  box-shadow:0px 0px 53px greenyellow;}
+  100% {  box-shadow:0px 0px 30px greenyellow;}
 }
 .project1 img{
   width:330px;
@@ -244,7 +256,7 @@ box-shadow: 10px 10px 15px black;
   color:greenyellow;
 }
 .project1 h3{
-  color:white;
+  color:greenyellow;
   text-align:center;
   font-size: 20px;
   transition:.5s;
@@ -283,7 +295,9 @@ box-shadow: 10px 10px 15px black;
   animation-iteration-count: infinite;
 }
 @keyframes ex2 {
-  100% {  box-shadow:0px 0px 53px crimson;    }
+  0% {  box-shadow:0px 0px 30px crimson;}
+  50% {  box-shadow:0px 0px 53px crimson;}
+  100% {  box-shadow:0px 0px 30px crimson;}
 }
 
 .project2 a{
@@ -295,7 +309,7 @@ box-shadow: 10px 10px 15px black;
   height:300px;
 }
 .project2 h3{
-  color:white;
+  color:crimson;
   text-align:center;
   font-size: 20px;
   transition:.5s;
@@ -335,20 +349,17 @@ box-shadow: 10px 10px 15px black;
   animation-iteration-count: infinite;
 }
 @keyframes ex3 {
-
-  100% {  box-shadow:0px 0px 40px skyblue;    }
+  0% {  box-shadow:0px 0px 30px skyblue;}
+  50% {  box-shadow:0px 0px 53px skyblue;}
+  100% {  box-shadow:0px 0px 30px skyblue;}
 }
 .project3 img{
   width:330px;
   transition:.5s;
   height:300px;
 }
-
-.project3 a{
-  color:crimson;
-}
 .project3 h3{
-  color:white;
+  color:skyblue;
   text-align:center;
   font-size: 20px;
   transition:.5s;
@@ -434,19 +445,16 @@ box-shadow: 10px 10px 15px black;
   text-align:center;
   margin-top:30px;
   margin-bottom: 100px;
+  color:skyblue;
 }
-.email label{
-  text-align:center;
-  color:rgb(112, 106, 106);
-  font-size:17px;
-}
+
 .email input{
   background:transparent;
   border:0;
   width:200px;
   border-radius:20px;
   text-align: center;
-  color:rgb(112, 106, 106);
+  color:skyblue;
 }
 .email input[type="submit"]{
   width:70px;
@@ -465,14 +473,18 @@ box-shadow: 10px 10px 15px black;
   height:120px;
   color:white;
   align-content: center;
+  border-top:5px solid skyblue;
+  border-radius:15px;
   background-color:#333;
 }
 .footer img{
+  margin-top:10px;
 width:70px;
 height:70px;
 text-align: center;
 align-self: center;
 align-content: center;
+border-radius:50%;
 }
 .footer p{
   font-size:17px;
